# GiLaPi

./: .gitignore
backend/: .test.env  pyproject.toml
backend/gilapi_api/: main.py
backend/gilapi_api/db/: __init__.py  db.py
backend/gilapi_api/db/crud/: __init__.py  gitlab.py  setup.py  user.py
backend/gilapi_api/db/crud/user/: __init__.py  gitlabs.py  user.py
backend/gilapi_api/db/models/: User.py  __init__.py  gitlab.py  project.py  user.py
backend/gilapi_api/db/schemas/: __init__.py  gitlab.py  project.py  setup.py  user.py
backend/gilapi_api/db/utils/: crud_model.py  mongo_model.py
backend/gilapi_api/dependencies/: setup.py
backend/gilapi_api/routers/: __init__.py  gitlabs.py  setup.py  user.py
backend/gilapi_api/routes/: __init__.py  gitlabs.py  projects.py  setup.py  user.py
backend/gilapi_api/settings/: __init__.py  db.py  settings.py
backend/tests/: conftest.py
backend/tests/routes/gitlabs/: data.py  test_get.py  test_post.py
backend/tests/routes/gitlabs/name/: test_delete.py  test_get.py
backend/tests/routes/setup/: mock_data.py  test_get.py  test_post.py
backend/tests/routes/users/: test_get.py  test_post.py
backend/tests/routes/users/mock/: utils.py
backend/tests/routes/users/username/: test_get.py
backend/tests/routes/users/username/gitlab/: test_post.py
backend2/: go.mod  go.sum
backend2/backend/: config.json  main.go  routes.go
backend2/backend/config/: config.go
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.tsx
frontend/src/libs/: GilapiClient.ts  GitlabFetcher.ts  gilapiClient.ts  simpleWindowMessageClient.ts
gilapi/: pyproject.toml
(+41 files in other folders)
