[tool.poetry]
name = "gilapi"
version = "0.1.0"
description = ""
authors = ["pgmystery <philipp.glaw@gmx.de>"]
readme = "README.md"
packages = [{include = "gilapi"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
